--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Medjerab Imad"
-logo: Portfolio_imad/imadfb.jpg
+logo: imadfb.jpg
 description: "Portfolio Data Scientist - IA"
 show_downloads: true
 theme: jekyll-theme-minimal
