--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "Medjerab Imad"
-logo: ‎img/imadfb.jpg
+logo: ‎Portfolio_imad/ image
+/imadfb.jpg
 description: "Portfolio Data Scientist - IA"
 show_downloads: true
 theme: jekyll-theme-minimal
