--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Medjerab Imad"
-logo: ‎imadfb.jpg
+logo: ‎assets/img/imadfb.jpg
 description: "Portfolio Data Scientist - IA"
 show_downloads: true
 theme: jekyll-theme-minimal
